# AratiParallelProgramming

./: CMakeLists.txt  Cluster.cpp  Cluster.h  EditDistance.cpp  EditDistance.h  EditDistanceOMP.cpp  EditDistanceOMP.h  KMeans.cpp  KMeans.h  KMeansOMP.cpp  KMeansOMP.h  Point.cpp  Point.h  README.md  Test1KM.csv  Test2KM.csv  Test3KM.csv  main.cpp
DataLoader/: DataLoader.py  DataLoaderPar.py  Dataset.py  main.py
DataLoader/Report/: DataLoader_Arati.tex  DataLoader_Arati_Eng.tex
DataLoader/results/: test1.csv  test1DL.csv  test2DL.csv
Reports/: EditDistance_Arati.tex  EditDistance_Arati_Eng.tex  KMeans_Arati.tex  KMeans_Arati_Eng.tex
inputs/: 19000-8D.csv  telescope_data.csv  xclara.txt
results/: Test1ED.csv  Test1KM.csv  Test2ED.csv  Test2KM.csv  Test3ED.csv  Test3KM.csv
